@@ -236,6 +236,18 @@ progress {
   flex-grow: 1;
 }
 
+#language-selector {
+  align-items: center;
+  display: flex;
+  gap: 0.5em;
+  margin-bottom: 1em;
+}
+
+#language-selector > select {
+  flex-grow: 1;
+  height: 2em;
+}
+
 #pressure-tester {
   align-items: center;
   border: 1px dashed #999;
